try to locate where bytebuf leak